--- a/services/knots/bitcoin.conf
+++ b/services/knots/bitcoin.conf
@@ -1,13 +1,24 @@
-# ---- network ----
+datadir=/var/lib/knots
+
+# ---- Network ----
 server=1
 listen=1
-listenonion=1
 discover=1
-relay=1
+bind=0.0.0.0
+port=8333
+
+# ---- Tor ----
+listenonion=1
 proxy=tor:9050
 torcontrol=tor:9051
-cookiefile=/var/lib/tor/control_auth_cookie
+onion=tor:9050
 onlynet=onion
+
+# ---- RPC ----
+rpcbind=0.0.0.0
+rpcallowip=0.0.0.0/0
+rpcuser=your_rpc_user
+rpcpassword=your_rpc_password
 
 # ---- history ----
 prune=0
@@ -21,4 +32,3 @@ acceptnonstddatacarrier=0
 acceptnonstdtxn=0
 minrelaytxfee=0.0000001
 incrementalrelayfee=0.0000001
-wtxidrelay=1
