--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,6 @@ services:
     # secrets:
     ports:
       - "8333:8333"
-      - "8332:8332"
     networks:
       - bitcoin-net
     restart: always
@@ -34,6 +33,9 @@ services:
     volumes:
       - ${KNOTS_DIR}:/var/lib/knots:rw
       - ${TOR_DIR}:/var/lib/tor:ro
+    # secrets:
+    ports:
+      - "8332:8332"
     networks:
       - bitcoin-net
     restart: always
