--- a/services/knots/bitcoin.conf
+++ b/services/knots/bitcoin.conf
@@ -1,6 +1,6 @@
 datadir=/var/lib/knots
 
-# ---- Network ----
+# ---- P2P ----
 server=1
 listen=1
 discover=1
@@ -16,6 +16,7 @@ onlynet=onion
 
 # ---- RPC ----
 rpcbind=0.0.0.0
+rpcport=8332
 rpcallowip=0.0.0.0/0
 rpcuser=your_rpc_user
 rpcpassword=your_rpc_password
