--- a/services/knots/bitcoin.conf
+++ b/services/knots/bitcoin.conf
@@ -15,6 +15,7 @@ onion=tor:9050
 onlynet=onion
 
 # ---- RPC ----
+#TODO better tailored bind addresses
 rpcbind=0.0.0.0
 rpcport=8332
 rpcallowip=0.0.0.0/0
