Add knots key verification

--- a/services/knots/Dockerfile
+++ b/services/knots/Dockerfile
@@ -3,11 +3,23 @@ FROM alpine:3.22 AS builder
 RUN apk add --no-cache \
   build-base autoconf automake pkgconfig libtool \
   boost-dev zeromq-dev libevent-dev unzip binutils \
-  sqlite-dev
+  sqlite-dev gnupg
 
-#TODO verify gpg key (ADD does that)
-ADD https://codeload.github.com/bitcoinknots/bitcoin/zip/refs/heads/28.x-knots /tmp/bitcoin.zip
-RUN cd /tmp && unzip bitcoin.zip && mv bitcoin-28.x-knots /bitcoin
+ARG _BASE_URL=https://github.com/bitcoinknots/bitcoin/releases/download/v28.1.knots20250305
+
+ADD ${_BASE_URL}/bitcoin-28.1.knots20250305.tar.gz  /tmp/
+ADD ${_BASE_URL}/SHA256SUMS                         /tmp/
+ADD ${_BASE_URL}/SHA256SUMS.asc                     /tmp/
+COPY luke-jr.asc                                    /tmp/
+
+WORKDIR /tmp
+
+RUN gpg --import luke-jr.asc && \
+    gpg --verify SHA256SUMS.asc SHA256SUMS && \
+    sha256sum -c SHA256SUMS --ignore-missing
+
+RUN tar -xzf bitcoin-28.1.knots20250305.tar.gz && \
+    mv bitcoin-28.1.knots20250305 bitcoin
 
 WORKDIR /bitcoin
 
@@ -30,7 +42,12 @@ RUN CXXFLAGS="-O2 -march=native -pipe -flto" LDFLAGS="-flto" ./configure \
 
 RUN make -j$(nproc)
 RUN make install
-RUN strip --strip-unneeded /usr/bin/knots/*
+
+RUN for f in /usr/bin/knots/*; do \
+  if file "$f" | grep -q ELF; then \
+    strip --strip-unneeded "$f"; \
+  fi; \
+done
 
 FROM alpine:3.22
 
@@ -38,12 +55,13 @@ RUN apk add --no-cache boost zeromq libevent sqlite
 
 ARG KNOTS_UID KNOTS_GID TOR_GID
 
+RUN mkdir -p /etc/knots
+
 RUN addgroup -g ${KNOTS_GID} knots && \
     addgroup -g ${TOR_GID} tor && \
     adduser -SDH -u ${KNOTS_UID} -G knots knots && \
     addgroup knots tor
 
-RUN mkdir -p /etc/knots
 COPY --from=builder /usr/bin/knots/ /usr/bin/
 COPY bitcoin.conf /etc/knots/bitcoin.conf
 
