--- a/services/knots/bitcoin.conf
+++ b/services/knots/bitcoin.conf
@@ -9,9 +9,9 @@ port=8333
 
 # ---- Tor ----
 listenonion=1
-proxy=tor:9050
-torcontrol=tor:9051
-onion=tor:9050
+onion=tor-client:9050
+proxy=tor-client:9050
+torcontrol=tor-client:9051
 onlynet=onion
 
 # ---- RPC ----
