--- a/.env
+++ b/.env
@@ -1,13 +1,8 @@
 KNOTS_DIR=/mnt/hdd/knots
-TOR_DIR=/var/lib/full-node/tor
+HOST_PUBLIC_IP=87.19.107.144
 
 RPC_USER=your_rpc_user
 RPC_PASSWORD=your_rpc_password
 
-HOST_PUBLIC_IP=87.19.107.144
-
-KNOTS_UID=1000
-KNOTS_GID=1000
-
-TOR_UID=1001
-TOR_GID=1001
+TOR_CONTROL_PASSWORD=your_tor_control_password
+TOR_CONTROL_HASHED_PASSWORD=16:ADDBD7CF108C995F60F831F115BA5EB95322FC4645433CDEB8948A57DF
