Fix user permissions

--- a/.env
+++ b/.env
@@ -1,5 +1,9 @@
-KNOTS_DIR=/mnt/hdd/knots
-HOST_PUBLIC_IP=87.19.107.144
+KNOTS_DATA=/mnt/hdd/bitcoin/knots
+TOR_DATA=/mnt/hdd/bitcoin/tor
+
+UID=1000
+
+HOST_PUBLIC_IP=62.19.105.32
 
 RPC_USER=your_rpc_user
 RPC_PASSWORD=your_rpc_password
