--- a/services/knots/Dockerfile
+++ b/services/knots/Dockerfile
@@ -18,10 +18,7 @@ RUN gpg --import gpg/* && \
     gpg --verify SHA256SUMS.asc SHA256SUMS && \
     sha256sum -c SHA256SUMS --ignore-missing
 
-RUN tar -xzf ${_RELEASE}.tar.gz && \
-    mv ${_RELEASE} bitcoin
-
-WORKDIR /tmp/bitcoin
+RUN tar -xzf ${_RELEASE}.tar.gz --strip-components=1
 
 RUN CXXFLAGS="-O2 -march=native -pipe -flto" LDFLAGS="-flto" ./configure \
     --quiet \
@@ -61,5 +58,3 @@ EXPOSE 8332
 
 VOLUME ["/var/lib/knots"]
 ENTRYPOINT ["bitcoind", "-conf=/etc/knots/bitcoin.conf"]
-
-#TODO fix unreachable node. ephemeral hidden service issue
