--- a/services/tor-client/Dockerfile
+++ b/services/tor-client/Dockerfile
@@ -4,13 +4,14 @@ RUN apk add --no-cache \
     build-base libevent-dev openssl-dev zlib-dev \
     gnupg coreutils binutils 
 
-ARG _BASE_URL=https://dist.torproject.org
-ARG _RELEASE=tor-0.4.8.9
+ARG VERSION=0.4.8.9
+ARG BASE_URL=https://dist.torproject.org
+ARG TARBALL=tor-$VERSION.tar.gz
 
-ADD ${_BASE_URL}/${_RELEASE}.tar.gz               /tmp/
-ADD ${_BASE_URL}/${_RELEASE}.tar.gz.sha256sum     /tmp/SHA256SUM
-ADD ${_BASE_URL}/${_RELEASE}.tar.gz.sha256sum.asc /tmp/SHA256SUM.asc
-COPY gpg/                                         /tmp/gpg/
+ADD $BASE_URL/$TARBALL                /tmp/
+ADD $BASE_URL/$TARBALL.sha256sum      /tmp/SHA256SUM
+ADD $BASE_URL/$TARBALL.sha256sum.asc  /tmp/SHA256SUM.asc
+COPY gpg/                             /tmp/gpg/
 
 WORKDIR /tmp
 
@@ -18,7 +19,7 @@ RUN gpg --import gpg/* && \
     gpg --verify SHA256SUM.asc SHA256SUM && \
     sha256sum -c SHA256SUM
 
-RUN tar -xzf ${_RELEASE}.tar.gz --strip-components=1
+RUN tar -xzf $TARBALL --strip-components=1
 
 RUN CXXFLAGS="-O2 -march=native -pipe -flto" LDFLAGS="-flto" ./configure \
     --quiet \
