--- a/services/i2p/Dockerfile
+++ b/services/i2p/Dockerfile
@@ -1,33 +1,47 @@
 FROM alpine:3.22 AS builder
 
 RUN apk add --no-cache \
-    openjdk24 gnupg gettext
+    gnupg
 
-ARG VERSION=2.9.0
-ARG SHA256SUM=03989319e186d9b06ed96ea0efa6ac95af1bc57af956d7f5f06f52f8da64fcd7
-ARG BASE_URL=https://files.i2p-projekt.de/$VERSION
-ARG TARBALL=i2psource_$VERSION.tar.bz2
+ARG VERSION=2.57.0
+ARG BASE_URL=https://github.com/PurpleI2P/i2pd
+ARG TARBALL=i2psource_$VERSION.tar.gz
 
 WORKDIR /tmp
 
-ADD $BASE_URL/$TARBALL      .
-ADD $BASE_URL/$TARBALL.sig  .
-COPY gpg/                   ./gpg/
+ADD $BASE_URL/archive/refs/tags/$VERSION.tar.gz          .
+ADD $BASE_URL/releases/download/$VERSION/SHA512SUMS      .
+ADD $BASE_URL/releases/download/$VERSION/SHA512SUMS.asc  .
+COPY gpg/                                                ./gpg/
 
 RUN gpg --import gpg/* && \
-    gpg --verify $TARBALL.sig $TARBALL && \
-    echo "$SHA256SUM $TARBALL" | sha256sum -c -
+    gpg --verify SHA256SUMS.asc SHA256SUMS && \
+    sha256sum -c SHA256SUMS --ignore-missing
 
 RUN tar -xzf $TARBALL --strip-components=1
 
-RUN ./gradlew assemble
+WORKDIR /tmp/build
+
+RUN cmake . \
+    -DCMAKE_INSTALL_BINDIR=/usr/bin/i2pd \
+    -DCMAKE_BUILD_TYPE=Release \
+    -DWITH_LIBRARY=OFF \
+    -DWITH_HARDENING=ON
+
+RUN make -j$(nproc)
+RUN make install
+
+RUN for f in /usr/bin/i2pd/*; do \
+  if file "$f" | grep -q ELF; then \
+    strip --strip-unneeded "$f"; \
+  fi; \
+done
 
 FROM alpine:3.22
 
-RUN apk add --no-cache \
-    openjdk24-jre
+RUN apk add --no-cache
 
-COPY --from=builder 
+COPY --from=builder /usr/bin/i2pd/ /usr/bin/
 
 WORKDIR /var/lib/i2p
 EXPOSE 
