--- a/services/knots/bitcoin.conf
+++ b/services/knots/bitcoin.conf
@@ -14,6 +14,11 @@ proxy=172.28.0.2:9050
 torcontrol=172.28.0.2:9051
 onlynet=onion
 
+# ---- i2p ----
+i2psam=172.28.0.4:7656
+i2pacceptincoming=1
+onlynet=i2p
+
 # ---- RPC ----
 rpcbind=0.0.0.0
 rpcport=8332
