--- a/services/i2pd/Dockerfile
+++ b/services/i2pd/Dockerfile
@@ -1,8 +1,13 @@
 FROM alpine:3.22 AS builder
 
 RUN apk add --no-cache \
-    build-base boost-dev openssl-dev cmake \
-    gnupg coreutils binutils
+    build-base \
+    boost-dev \
+    openssl-dev \ 
+    gnupg \
+    cmake \
+    coreutils \
+    binutils
 
 ARG VERSION=2.57.0
 ARG BASE_URL=https://github.com/PurpleI2P/i2pd
@@ -43,7 +48,10 @@ done
 FROM alpine:3.22
 
 RUN apk add --no-cache \
-    boost openssl
+    openssl \
+    boost-system \
+    boost-filesystem \
+    boost-program_options
 
 COPY --from=builder /usr/bin/i2pd/              /usr/bin/
 COPY --from=builder /tmp/contrib/certificates/  /etc/i2pd/certificates
