Remove support for op_return

--- a/services/knots/bitcoin.conf
+++ b/services/knots/bitcoin.conf
@@ -33,6 +33,7 @@ dbcache=1000
 peerbloomfilters=0
 
 # ---- mempool ----
+datacarriersize=0
 acceptnonstddatacarrier=0
 acceptnonstdtxn=0
 minrelaytxfee=0.0000001
