--- a/services/i2pd/Dockerfile
+++ b/services/i2pd/Dockerfile
@@ -3,7 +3,7 @@ FROM alpine:3.22 AS builder
 RUN apk add --no-cache \
     build-base \
     boost-dev \
-    openssl-dev \ 
+    openssl-dev \
     gnupg \
     cmake \
     coreutils \
@@ -13,7 +13,7 @@ ARG VERSION=2.57.0
 ARG BASE_URL=https://github.com/PurpleI2P/i2pd
 ARG TARBALL=i2pd-$VERSION.tar.gz
 
-WORKDIR /tmp
+WORKDIR /opt/i2pd
 
 ADD ${BASE_URL}/archive/refs/tags/${VERSION}.tar.gz          ${TARBALL}
 ADD ${BASE_URL}/releases/download/${VERSION}/SHA512SUMS      SHA512SUMS
@@ -26,24 +26,19 @@ RUN gpg --import gpg/* && \
 
 RUN tar xzf ${TARBALL} --strip-components=1
 
-WORKDIR /tmp/build
+WORKDIR /opt/i2pd/build
 
 RUN cmake . \
     -DCMAKE_CXX_FLAGS="-O2 -march=native -pipe -flto" \
     -DCMAKE_EXE_LINKER_FLAGS="-flto" \
-    -DCMAKE_INSTALL_BINDIR=/usr/bin/i2pd \
+    -DCMAKE_INSTALL_BINDIR=/opt/i2pd/bin \
     -DCMAKE_BUILD_TYPE=Release \
     -DWITH_LIBRARY=OFF \
     -DWITH_HARDENING=ON
 
-RUN make -j$(nproc)
-RUN make install
+RUN cmake --build . --target install --parallel $(nproc)
 
-RUN for f in /usr/bin/i2pd/*; do \
-  if file "$f" | grep -q ELF; then \
-    strip --strip-unneeded "$f"; \
-  fi; \
-done
+RUN strip --strip-unneeded /opt/i2pd/bin/i2pd
 
 FROM alpine:3.22
 
@@ -53,9 +48,9 @@ RUN apk add --no-cache \
     boost-filesystem \
     boost-program_options
 
-COPY --from=builder /usr/bin/i2pd/              /usr/bin/
-COPY --from=builder /tmp/contrib/certificates/  /etc/i2pd/certificates
-COPY i2pd.conf                                  /etc/i2pd/i2pd.conf
+COPY --from=builder /opt/i2pd/bin/i2pd               /usr/local/bin/i2pd
+COPY --from=builder /opt/i2pd/contrib/certificates/  /etc/i2pd/certificates
+COPY i2pd.conf                                       /etc/i2pd/i2pd.conf
 
 WORKDIR /var/lib/i2pd
 EXPOSE 17604/tcp 17604/udp
